test_suite/alan-2022-examples/passing/000041_pair.alan
source c begin get O[2]; leave end
