test_suite/alan-2022-examples/failing/004570_mutation.alan
source A begin leave false get sp end
